--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,10 @@ local.properties
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
+# others
+.setting
+*/target/*
+
 ### Eclipse Patch ###
 # Spring Boot Tooling
 .sts4-cache/
